<resources>
    <string name="app_name">TaxCore mobile POS</string>
    <string name="remember_switch">Remember me"\n"(less secure)</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">UserName</string>
    <string name="pac">PAC</string>
    <string name="create_pin">Create Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="date_and_time">SDC time:</string>
    <string name="total">Total:</string>
    <string name="rec_no">Rec no:</string>
    <string name="label_sdc_num">SDC Inv No:</string>
    <string name="price">Unit Price:</string>
    <string name="name">Name:</string>
    <string name="vat">Tax Labels:</string>
    <string name="vat_code_f">Tax Labels Code: F</string>
    <string name="vat_code_e">Tax Labels Code: E</string>
    <string name="vat_code_a">Tax Labels Code: A</string>
    <string name="barcode">EAN:</string>
    <string name="update">Update</string>
    <string name="account">Account</string>
    <string name="mail">Email</string>
    <string name="settings">Settings</string>
    <string name="title_journal">Journal</string>
    <string name="action_settings">Settings</string>
    <string name="certificates">Certificates</string>
    <string name="taxes">Tax</string>
    <string name="v_cdc_server">SDC Location</string>
    <string name="add_v_cdc_server">SDC server settings</string>
    <string name="receipt">Receipt</string>
    <string name="logout">Log out</string>
    <string name="address">Address:</string>
    <string name="address_esdc">example: http://192.168.1.1:8800</string>
    <string name="item">Item</string>
    <string name="add_item">Add item</string>
    <string name="edit_item">Edit item</string>
    <string name="inetcpos">Create invoice</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="store">Store:</string>
    <string name="state">State:</string>
    <string name="country">Country</string>
    <string name="cashier">Cashier:</string>
    <string name="invoice_no">Invoice No:</string>
    <string name="invoice_time">Invoice time:</string>
    <string name="normal_sale">Normal Sale</string>
    <string name="items">Items:</string>
    <string name="qty">Qty:</string>
    <string name="percent">%</string>
    <string name="search">search</string>
    <string name="search_title">Search</string>
    <string name="ref">Reference Document Number</string>
    <string name="invoice_type">Invoice Type:</string>
    <string name="transaction_type">Transaction Type:</string>
    <string name="payment">Payment:</string>
    <string name="normal">Normal</string>
    <string name="finish_receipt">Finish Receipt</string>
    <string name="add_items">Create invoice</string>
    <string name="proforma">Proforma</string>
    <string name="training">Training</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="other">Other</string>
    <string name="enter_pin">Enter pin</string>
    <string name="repeat_pin">Repeat pin</string>
    <string name="no_itemss">Tap + to create items</string>
    <string name="catalog">Catalog</string>
    <string name="enter_by_pin">Create/Change pin code</string>
    <string name="use_pin_code">Use pin code</string>
    <string name="cashiers">Cashier TIN</string>
    <string name="cashier_one">Cashier one</string>
    <string name="cashier_two">Cashier two</string>
    <string name="cashier_three">Cashier three</string>
    <string name="copy">Copy</string>
    <string name="refund">Refund</string>
    <string name="invoice">Invoice</string>
    <string name="check">Check</string>
    <string name="wiretransfer">WireTransfer</string>
    <string name="voucher">Voucher</string>
    <string name="mobile_money">MobileMoney</string>
    <string name="buyer_id">Buyer TIN</string>
    <string name="sale">Sale</string>
    <string name="html"><![CDATA[This <i>is</i> a <b>test</b> of]]></string>
    <string name="no_journals">No journals</string>
    <string name="exit_app">Press again to exit</string>
    <string name="remove_all">remove all</string>
    <string name="create_edit_pin">Create/edit pin</string>
    <string name="count">Stock</string>
    <string name="the_list_is_empty">The list is empty</string>
    <string name="no_products">You need to create items before</string>
    <string name="tax_labels_code">Tax Labels Code:</string>
    <string name="buyer_cost_center">Buyer Cost Center</string>
    <string name="export_catalog">Export catalog</string>
    <string name="import_catalog">Import catalog</string>
    <string name="export_invoices">Export invoices</string>
    <string name="import_invoices">Import invoices</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="ean_barcode">EAN:</string>
    <string name="reset">reset</string>
    <string name="date_and_time_title">Date and time</string>
    <string name="from">From:</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="to">To:</string>
    <string name="sdc_invoice">SDC Invoice №</string>
    <string name="buyer_tin">Buyer TIN</string>
    <string name="payment_type">Payment option:</string>
    <string name="transaction_type_spinner">Transaction option:</string>
    <string name="invoice_type_spinner">Invoice option:</string>
    <string name="filter">filter</string>
    <string name="denied_permission">You need to allow ALL permissions for the application to work correctly</string>
    <string name="vsdc_server_title">VSDC server settings</string>
    <string name="vsdc_server">VSDC server</string>
    <string name="esdc_server_title">ESDC server settings</string>
    <string name="esdc_server">ESDC server</string>
    <string name="app_info">About App</string>
    <string name="mobile_pos_for_android">TaxCore mobile POS for Android</string>
    <string name="taxes_info">Taxes are configured automatically from certificate</string>
    <string name="vsdc_server_info">VSDC server address is configured from certificate</string>
    <string name="switch_enable_vsdc">Enable VSDC</string>
    <string name="switch_enable_esdc">Enable ESDC</string>
    <string name="not_configured">Application not configured</string>
    <string name="configure">Configure</string>
    <string name="the_list_is_empty_add_items">Tap + to create items</string>
    <string name="about_all_rights_reserved">All rights reserved</string>
    <string name="about_more_information_link">For more information visit  www.dti.rs</string>
    <string name="catalog_add_item">Add item</string>
    <string name="catalog_search_items">Search items</string>
    <string name="exit">Exit</string>
    <string name="settings_sdc_server">SDC server</string>
    <string name="title_enter_pac">Enter PAC</string>
    <string name="title_enter_pin">Enter PIN</string>
    <string name="title_app_not_configured">Application not configured</string>
    <string name="title_finish_configuration">Finish app configuration</string>
    <string name="title_view_items">View items</string>
    <string name="title_import">Import</string>
    <string name="title_export">Export</string>
    <string name="title_export_catalog">Export catalog</string>
    <string name="title_export_journal">Export Journal</string>
    <string name="title_journal_items">Journal items</string>
    <string name="title_invoices">Invoices</string>
    <string name="title_search_journal">Search Invoices</string>
    <string name="title_about">About</string>
    <string name="title_pref_section_vsdc">VSDC server settings</string>
    <string name="title_pref_section_esdc">ESDC server settings</string>
    <string name="title_manage_cashiers">Manage cashiers</string>
    <string name="title_add_cashiers">Add new cashier</string>
    <string name="title_view_cashiers">View cashiers</string>
    <string name="title_search_catalog">Search catalog</string>
    <string name="title_settings">Settings</string>
    <string name="title_taxes">Taxes</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cashiers">Cashiers</string>
    <string name="label_item_details">Item details</string>
    <string name="label_tax_labels">Tax Labels</string>
    <string name="label_tax_label">Tax Label</string>
    <string name="label_other">Other</string>
    <string name="label_add_to_favorites">Add to favorites</string>
    <string name="label_invoice_details">Invoice details</string>
    <string name="label_date_and_time">Date and time</string>
    <string name="label_try_again">Try again</string>
    <string name="label_no_results">No results</string>
    <string name="label_no_results_msg">Please use different search\ncriteria and try again</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_invoice_items">Invoice Items</string>
    <string name="error_no_internet_title">No internet connection</string>
    <string name="error_no_internet_message">App requires internet connection to work properly. Please check your connection and try again.</string>
    <string name="error_require_internet_message">App configuration is not possible without the internet connection. Please enable your connection and try again.</string>
    <string name="error_invalid_url">Unable to open URL</string>
    <string name="error_general">Something went wrong. Try again.</string>
    <string name="error_item_name">Item name must be at least 2 characters long</string>
    <string name="error_title">Error!</string>
    <string name="error_minimum_one_character">Minimum one characters</string>
    <string name="error_minimum_eight_characters">Minimum eight characters</string>
    <string name="error_minimum_one_number_or_too_long">Minimum one number or number is too long</string>
    <string name="error_unit_price">Unit price can\'t be less then 0.01 or number is too big</string>
    <string name="error_invalid_ref_doc_format">Ref. number should be in format RequestedBy-SignedBy-Counter</string>
    <string name="error_provide_valid_pac">You have to provide valid PAC value</string>
    <string name="error_invalid_vsdc">V-SDC address is invalid</string>
    <string name="text_add_edit_item">Add/Edit Item</string>
    <string name="text_loading_settings">Loading app settings…</string>
    <string name="text_uid">UID</string>
    <string name="text_location_name">Location name</string>
    <string name="text_currently_active_cashier">Current cashier</string>
    <string name="text_no_items">No items</string>
    <string name="tooltip_apply_filter">Apply filter</string>
    <string name="tooltip_save_item">Save item</string>
    <string name="tooltip_add_to_favorites">Add to favorites</string>
    <string name="vsdc_server_address">VSDC server address (non editable)</string>
    <string name="esdc_server_name">ESDC server name</string>
    <string name="esdc_dialog_name_title">Enter ESDC server name</string>
    <string name="esdc_dialog_name_message">This name is for your reference</string>
    <string name="esdc_server_address">ESDC server address</string>
    <string name="hint_search">Search</string>
    <string name="hint_cashier_id">Cashier ID</string>
    <string name="hint_cashier_name">Cashier name</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_unit_price">Unit price</string>
    <string name="hint_gtin">EAN</string>
    <string name="toast_invalid_certificate">Invalid certificate</string>
    <string name="toast_esdc_address_invalid">E-SDC address is invalid</string>
    <string name="toast_pin_invalid">PIN is invalid. Please try again with correct PIN</string>
    <string name="selected_environment">Environment</string>
</resources>