<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:splitMotionEvents="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/catalogRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:splitMotionEvents="false"
            android:visibility="visible"
            tools:itemCount="1"
            tools:listitem="@layout/catalog_card_item"
            tools:visibility="visible" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/catalogNoResultsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:gravity="center"
                android:text="@string/label_no_results" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_no_results_msg" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/catalogTryAgainButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_try_again"
                android:textColor="@color/colorBlack" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filterFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/filter"
        android:src="@drawable/filter_outline"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
